--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
-    "formidable": "^3.5.1",
+    "formidable": "^3.5.2",
     "js-cookie": "^3.0.5",
     "multer": "^1.4.5-lts.1",
     "next-connect": "^1.0.0",
@@ -18,7 +18,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-router-dom": "^6.26.2",
-    "sweetalert2": "^11.14.1"
+    "sweetalert2": "^11.14.1",
+    "uuid": "^11.0.2"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
