--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cookies": "^0.9.1",
     "formidable": "^3.5.2",
     "js-cookie": "^3.0.5",
     "multer": "^1.4.5-lts.1",
+    "next-auth": "^4.24.10",
     "next-connect": "^1.0.0",
+    "next-iron-session": "^4.2.0",
     "pg": "^8.13.0",
     "react": "^18",
     "react-dom": "^18",
